[FIX] web: blurred image on sales quote T&C
1. Install [Sales] and [Studio] apps
2. [Sales]-[Orders]-[Quotations]
- create one, add a long body of text on Terms and Conditions section
- add an image somewhere in between
- click Print - [Quotation/Order]

Issue: difficult to reproduce, but sporadic opaque image appears
Resolve by: remove the possibility of irrelevant style cascading

opw-3060727
affects: 15.0, saas-15.2

--- a/addons/web/static/src/legacy/scss/report.scss
+++ b/addons/web/static/src/legacy/scss/report.scss
@@ -13,6 +13,14 @@ body {
     font-family: $o-default-report-font;
 }
 
+/* Customize and overwrite default settings in the bootstrap.scss
+    to avoid sporadic appearance of image opacity
+ *  See https://github.com/wkhtmltopdf/wkhtmltopdf/issues/2135
+ */
+hr {
+    border-top-color: rgb(229, 229, 229);
+}
+
 span.o_force_ltr {
     display: inline;
 }
